--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: rgb(55, 102, 146);
-    --secodary-color: rgb(247, 172, 34);
+    --primary-color: #0B0CAC;
+    --secodary-color: #FF5576;
     --dark-color: rgb(65, 63, 63);
     --white-color: rgb(225, 236, 229);
 }
@@ -65,6 +65,14 @@ pre[class*="language-"] {
     white-space: pre-wrap;
     word-break: break-all;
     word-wrap: break-word;
+}
+
+.btn-outline-dark {
+    border-color: #0B0CAC !important;
+}
+
+.btn-outline-dark:hover {
+    background-color: #0B0CAC !important;
 }
 
 main>.container {
