--- a/css/prism.css
+++ b/css/prism.css
@@ -31,6 +31,7 @@ pre[class*="language-"] {
 }
 
 @media print {
+
 	code[class*="language-"],
 	pre[class*="language-"] {
 		text-shadow: none;
@@ -38,7 +39,7 @@ pre[class*="language-"] {
 }
 
 pre[class*="language-"],
-:not(pre) > code[class*="language-"] {
+:not(pre)>code[class*="language-"] {
 	background: hsl(30, 20%, 25%);
 }
 
@@ -53,7 +54,7 @@ pre[class*="language-"] {
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
+:not(pre)>code[class*="language-"] {
 	padding: .15em .2em .05em;
 	border-radius: .3em;
 	border: .13em solid hsl(30, 20%, 40%);
@@ -118,6 +119,7 @@ pre[class*="language-"] {
 .token.bold {
 	font-weight: bold;
 }
+
 .token.italic {
 	font-style: italic;
 }
@@ -136,7 +138,7 @@ pre[class*="language-"].line-numbers {
 	counter-reset: linenumber;
 }
 
-pre[class*="language-"].line-numbers > code {
+pre[class*="language-"].line-numbers>code {
 	position: relative;
 	white-space: inherit;
 }
@@ -147,7 +149,8 @@ pre[class*="language-"].line-numbers > code {
 	top: 0;
 	font-size: 100%;
 	left: -3.8em;
-	width: 3em; /* works for line-numbers below 1000 lines */
+	width: 3em;
+	/* works for line-numbers below 1000 lines */
 	letter-spacing: -1px;
 	border-right: 1px solid #999;
 
@@ -158,16 +161,15 @@ pre[class*="language-"].line-numbers > code {
 
 }
 
-	.line-numbers-rows > span {
-		display: block;
-		counter-increment: linenumber;
-	}
+.line-numbers-rows>span {
+	display: block;
+	counter-increment: linenumber;
+}
 
-		.line-numbers-rows > span:before {
-			content: counter(linenumber);
-			color: #999;
-			display: block;
-			padding-right: 0.8em;
-			text-align: right;
-		}
-
+.line-numbers-rows>span:before {
+	content: counter(linenumber);
+	color: #999;
+	display: block;
+	padding-right: 0.8em;
+	text-align: right;
+}
